FUlly tested the validtor